// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.usergroup;

import "ws-commons.proto";

option java_package = "org.sonarqube.ws";
option java_outer_classname = "UserGroups";
option optimize_for = SPEED;

// WS api/user_groups/create
message CreateWsResponse {
  optional Group group = 1;
}

// WS api/user_groups/update
message UpdateWsResponse {
  optional Group group = 1;
}

// WS api/user_groups/search
message SearchWsResponse {
  optional sonarqube.ws.commons.Paging paging = 1;
  repeated Group groups = 2;
}

message Group {
  optional int64 id = 1;
  optional string organization = 2;
  optional string name = 3;
  optional string description = 4;
  optional int32 membersCount = 5;
  optional bool default = 6;
}
